# R-type

./: CMakeLists.txt  README.md  install.ps1  install.sh
GameEngine/: .gitignore  CMakeLists.txt  SDL2ConfigVersion.cmake
GameEngine/Includes/: GameEngineECS.hpp  GameEngineInput.hpp  GameEngineNetwork.hpp  GameEngineRendering.hpp  GameEngineScene.hpp  GameEngineUtils.hpp  GameEngineWindow.hpp
GameEngine/Includes/header/: ECSNamespace.hpp  NetworkNamespace.hpp
GameEngine/Includes/header/ECS/: EntityManager.hpp  SystemManager.hpp
GameEngine/Includes/header/ECS/Components/: AComponent.hpp  ADrawable.hpp  Animation.hpp  Collider.hpp  Input.hpp  Movable.hpp  SpriteSheet.hpp
GameEngine/Includes/header/ECS/Systems/: ASystem.hpp  AnimationSystem.hpp  MovementSystem.hpp  ParallaxSystem.hpp  RenderSystem.hpp
GameEngine/Includes/header/Lib/: SDL2Namespace.hpp
GameEngine/Includes/header/Lib/SDL2/: SDL2.hpp  Timer.hpp
GameEngine/Includes/header/Lib/SDL2/Audio/: Mixer.hpp  Sound.hpp
GameEngine/Includes/header/Lib/SDL2/Graphic/: Rect.hpp  Renderer.hpp  Texture.hpp
GameEngine/Includes/header/Lib/SDL2/Window/: Event.hpp
GameEngine/Includes/header/Network/: AServer.hpp  Header.hpp  OwnedMessage.hpp  Server.hpp  Utils.hpp
GameEngine/Includes/header/Network/Message/: CreateRoom.hpp  ListRoom.hpp  PlayerJoin.hpp  PlayerLeave.hpp  PlayerPosition.hpp  ShootPos.hpp  SpawnEnemy.hpp  UDPInit.hpp
GameEngine/Includes/header/Scene/: IScene.hpp
GameEngine/Includes/header/Utils/: JSON.hpp
GameEngine/scripts/: clean.sh  genIncludes.py  launch.sh
GameEngine/src/Classes/: SceneNamespace.hpp  UtilsNamespace.hpp
GameEngine/src/Classes/ECS/: AudioManager.cpp  AudioManager.hpp  ComponentManager.cpp  ComponentManager.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  SystemManager.cpp
GameEngine/src/Classes/ECS/Components/: AComponent.cpp  ADrawable.cpp  Animation.cpp  Collider.cpp  Input.cpp  Movable.cpp  Parallax.cpp  Parallax.hpp  Position.cpp  Position.hpp  SpriteSheet.cpp  Text.cpp  Text.hpp  Velocity.cpp  Velocity.hpp
GameEngine/src/Classes/ECS/Systems/: ASystem.cpp  AnimationSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  ParallaxSystem.cpp  RenderSystem.cpp
GameEngine/src/Classes/Lib/SDL2/: SDL2.cpp  Timer.cpp
GameEngine/src/Classes/Lib/SDL2/Audio/: Mixer.cpp  Music.cpp  Music.hpp  Sound.cpp
GameEngine/src/Classes/Lib/SDL2/Graphic/: Image.cpp  Image.hpp  Rect.cpp  Renderer.cpp  SpriteManager.cpp  SpriteManager.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Surface.cpp  Surface.hpp  Text.cpp  Text.hpp  Texture.cpp
GameEngine/src/Classes/Lib/SDL2/Window/: Event.cpp  Window.cpp  Window.hpp
GameEngine/src/Classes/Network/: AClient.hpp  Client.cpp  Client.hpp  Connection.hpp  Message.hpp  ServerInterface.hpp  ThreadQueue.hpp
GameEngine/src/Classes/Network/Message/: JoinMessage.hpp  JoinRoom.hpp  PlayerDisconnect.hpp  PlayerWon.hpp  Shoot.hpp
GameEngine/src/Classes/Scene/: AScene.cpp  AScene.hpp  SceneManager.cpp  SceneManager.hpp
GameEngine/src/Classes/Utils/: Error.cpp  Error.hpp  JSON.cpp  Vector2.hpp
GameEngine/src/Classes/Utils/Debug/: Log.cpp  Log.hpp
client/: CMakeLists.txt
client/src/: ClientNamespace.hpp  Core.cpp  Core.hpp  NetworkNamespace.hpp  main.cpp  main.hpp
client/src/Components/: ButtonScene.cpp  ButtonScene.hpp  ButtonSound.cpp  ButtonSound.hpp  ChangeKey.cpp  ChangeKey.hpp  CreateRoom.cpp  CreateRoom.hpp  Damage.cpp  Damage.hpp  Enemy.cpp  Enemy.hpp  Health.cpp  Health.hpp  HealthUI.cpp  HealthUI.hpp  JoinRoom.cpp  JoinRoom.hpp  MainPlayer.cpp  MainPlayer.hpp  OnlinePlayer.cpp  OnlinePlayer.hpp  Score.cpp  Score.hpp  SelectRoom.cpp  SelectRoom.hpp  SingletonIdRoom.cpp  SingletonIdRoom.hpp  UnselectRoom.cpp  UnselectRoom.hpp
client/src/Network/: SingletonClient.cpp  SingletonClient.hpp
client/src/Network/Message/Parser/: AParser.cpp  AParser.hpp  IParser.hpp  JoinMessage.cpp  JoinMessage.hpp  ListRoom.cpp  ListRoom.hpp  Parser.cpp  Parser.hpp  PlayerDisconnect.cpp  PlayerDisconnect.hpp  PlayerJoin.cpp  PlayerJoin.hpp  PlayerPosition.cpp  PlayerPosition.hpp  PlayerWin.cpp  PlayerWin.hpp  Shoot.cpp  Shoot.hpp  ShootPos.cpp  ShootPos.hpp  SpawnEnemy.cpp  SpawnEnemy.hpp  UDPInit.cpp  UDPInit.hpp
client/src/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  OptionScene.cpp  OptionScene.hpp  RoomScene.cpp  RoomScene.hpp
client/src/Systems/: ChangeKeySystem.cpp  ChangeKeySystem.hpp  ChangeSoundSystem.cpp  ChangeSoundSystem.hpp  ClickButtonSceneSystem.cpp  ClickButtonSceneSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  HealthSystem.cpp  HealthSystem.hpp  HoverButtonSceneSystem.cpp  HoverButtonSceneSystem.hpp  HoverCreateRoomSystem.cpp  HoverCreateRoomSystem.hpp  HoverJoinRoomSystem.cpp  HoverJoinRoomSystem.hpp  HoverSelectRoomSystem.cpp  HoverSelectRoomSystem.hpp  HoverUnselectRoomSystem.cpp  HoverUnselectRoomSystem.hpp  InputSystem.cpp  InputSystem.hpp  MainPlayer.cpp  MainPlayer.hpp  OnlinePlayer.cpp  OnlinePlayer.hpp  ReleaseButtonSceneSystem.cpp  ReleaseButtonSceneSystem.hpp  ScoreSystem.cpp  ScoreSystem.hpp
client/src/Transitions/: ATransition.cpp  ATransition.hpp  GameOver.cpp  GameOver.hpp  GameStart.cpp  GameStart.hpp  GameWon.cpp  GameWon.hpp
cmake/: SDL2Config.cmake  SDL2_TTFConfig.cmake  SDL2_imageConfig.cmake  SDL2_mixerConfig.cmake  asioConfig.cmake  doxygenConfig.cmake  nlohmann_jsonConfig.cmake
server/: .gitignore  CMakeLists.txt
server/src/: GameLogicNamespace.hpp  NetworkNamespace.hpp  main.cpp  main.hpp
server/src/GameLogic/: Game.cpp  Game.hpp  Party.cpp  Party.hpp  PartyManager.cpp  PartyManager.hpp  SpawnManager.cpp  SpawnManager.hpp
server/src/Network/: MyServer.cpp  MyServer.hpp  Rooms.hpp
server/src/Network/Message/Parser/: AParser.cpp  AParser.hpp  CreateRoom.cpp  CreateRoom.hpp  JoinMessage.cpp  JoinMessage.hpp  JoinRoom.cpp  JoinRoom.hpp  ListRoom.cpp  ListRoom.hpp  Parser.cpp  Parser.hpp  PlayerDisconnect.cpp  PlayerDisconnect.hpp  PlayerPosition.cpp  PlayerPosition.hpp  Shoot.cpp  Shoot.hpp  ShootPos.cpp  ShootPos.hpp
